@@ -16,6 +16,7 @@
     * new options for in and out temperature/humidity/pressure, have been added to the option window.
     * it is now possible to choose which sensor will feed temperature/humidity/pressure data.
     * the sensor which feeds temperature data will feed battery and signal data.
+    * an error message has been added if all options concerning database are empty.
 
   * FIXED:
     * a widget has been forgotten in keyboard window.
